checking eye tracking duration

--- a/CUNY_FACIAL/Code/cuny_data.ipynb
+++ b/CUNY_FACIAL/Code/cuny_data.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:23:11.519334Z",
@@ -252,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "def create_pdf(values, file_name = \"output_testfile.pdf\"):\n",
+    "def recruitment(values, file_name = \"output_testfile.pdf\"):\n",
     "    pdf = FPDF()\n",
     "    pdf.set_auto_page_break(auto=True, margin=15)\n",
     "    pdf.add_page()\n",
@@ -263,7 +263,7 @@
     "    today = today.strftime(\"%B %d, %Y\")\n",
     "    pdf.set_fill_color(220, 220, 220)  # RGB values for the color\n",
     "    pdf.cell(180, 10, f\"CUNY Data Report, {calendar.day_name[date.today().weekday()]}, {today} \",ln=True, align='C', border=1, fill=True)\n",
-    "    pdf.cell(180, 5, f\"N:{values['N']}\",ln=True, align='L', border=1)\n",
+    "    pdf.cell(180, 5, f\"N: {values['N']}\",ln=True, align='L', border=1)\n",
     "    pdf.cell(180, 5, f\"New Subjects Last Week:{values['n_lastweek']}\",ln=True, align='L', border=1)\n",
     "\n",
     "    # Step 3: Insert the plot image into the PDF\n",
@@ -288,19 +288,41 @@
     "    # Resting State\n",
     "    pdf.ln(5)\n",
     "    pdf.cell(180, 5, txt=f\"Completed Social Task: {values['Completed SocialTask']}%\", ln=True, align='L', border=1, fill=False)\n",
-    "\n",
-    "    pdf.output(file_name)"
+    "    return pdf\n",
+    "    #pdf.output(file_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "create_pdf(calculated_values)"
+    "pdf = recruitment(calculated_values)\n",
+    "pdf.ln(10)\n",
+    "pdf.cell(180, 5, txt=\"XXXXXXX\", ln=True, align='L', border=1, fill=True)\n",
+    "pdf.output(\"output_testfile.pdf\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Single Subject QC"
    ]
   },
   {
@@ -308,7 +330,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Find the subjects collected this week\n",
+    "subjects_thiswk = df.loc[df.date >= date.today() - pd.Timedelta(7, 'D')].Subject\n",
+    "subject = 'sub-P5318014'"
+   ]
   }
  ],
  "metadata": {
