Looked at durtions for two new pilots

--- a/CUNY_FACIAL/Code/pilot_check.ipynb
+++ b/CUNY_FACIAL/Code/pilot_check.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-18T20:11:29.428824Z",
@@ -80,30 +80,23 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Stream 4: Calculated effective sampling rate 249.9917 Hz is different from specified rate 1000.0000 Hz.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['WebcamStream',\n",
-       " 'Stimuli_Markers',\n",
+       "['EGI NetAmp 0',\n",
        " 'OpenSignals',\n",
        " 'Tobii',\n",
-       " 'EGI NetAmp 0',\n",
+       " 'Stimuli_Markers',\n",
+       " 'WebcamStream',\n",
        " 'Microphone']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xdf_path = \"/Users/bryan.gonzalez/PycharmProjects/MOBI2024/CUNY_FACIAL/Data/Pilots/sub-P101010_ses-S001_task-CUNY_run-001_mobi.xdf\"\n",
+    "xdf_path = \"/Users/bryan.gonzalez/PycharmProjects/MOBI2024/CUNY_FACIAL/Data/Pilots/sub-P121212_ses-S001_task-CUNY_run-001_mobi.xdf\"\n",
     "#xdf_path = sub_files[0]\n",
     "data, header = pyxdf.load_xdf(xdf_path)\n",
     "streams_collected = [stream['info']['name'][0] for stream in data]\n",
@@ -1416,6 +1409,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eeg_dat = data[streams_collected.index('EGI NetAmp 0')]\n",
+    "eeg_df = pd.DataFrame(eeg_dat['time_series'])\n",
+    "eeg_df['lsl_time_stamp'] = eeg_dat['time_stamps']\n",
+    "\n",
+    "eeg_exp = get_event_data('Experiment', eeg_df, stim_df=stim_df)\n",
+    "start = eeg_exp['lsl_time_stamp'].values[0]\n",
+    "stop = eeg_exp['lsl_time_stamp'].values[-1]\n",
+    "eeg_dur = stop - start\n",
+    "\n",
+    "# List of variables to include in the DataFrame\n",
+    "dur_variables = ['exp_dur', 'et_dur', 'ps_dur', 'cam_dur', 'mic_story_dur', 'story_dur', 'eeg_dur']\n",
+    "variables = {name: globals()[name] for name in dur_variables}\n",
+    "\n",
+    "# Convert the dictionary to a pandas DataFrame\n",
+    "durations_df = pd.DataFrame(list(variables.items()), columns=['Variable Name', 'Variable Value'])\n",
+    "durations_df"
+   ]
   }
  ],
  "metadata": {
