added psychopy script

--- a/CUNY_FACIAL/Code/pilot_check.ipynb
+++ b/CUNY_FACIAL/Code/pilot_check.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-18T20:11:29.428824Z",
@@ -90,7 +90,7 @@
        " 'Microphone']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-18T20:22:12.750010Z",
@@ -261,7 +261,7 @@
        "[261 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,6 +340,56 @@
    ],
    "source": [
     "story_onsets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'After_Searching_I_Found_and_Met_My_Birth_Mother.wav'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from glob import glob\n",
+    "import os\n",
+    "\n",
+    "files = glob('../OLD_AUDIO/*.wav')   \n",
+    "files[6].split('/')[-1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import librosa\n",
+    "import soundfile as sf\n",
+    "\n",
+    "wav_path = \"/Users/bryan.gonzalez/PycharmProjects/MOBI2024/CUNY_FACIAL/The_Birthday_Party_Prank.wav\"\n",
+    "for file in glob('../OLD_AUDIO/*.wav'):\n",
+    "    y, sr = librosa.load(file)\n",
+    "    y_441k = librosa.resample(y, orig_sr=sr, target_sr=44100)\n",
+    "\n",
+    "    sf.write('NEW_AUDIO_44/'+ file.split('/')[-1], y_441k, 44100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
@@ -802,6 +852,9 @@
    "source": [
     "ET = data[streams_collected.index('Tobii')]\n",
     "et_dat = ET['time_series']\n",
+    "\n",
+    "\n",
+    "# device timestamps are in microseconds, convert to milliseconds\n",
     "# Get the column names\n",
     "column_labels = [ET['info']['desc'][0]['channels'][0]['channel'][i]['label'][0] for i in range(len(ET['info']['desc'][0]['channels'][0]['channel']))]\n",
     "\n",
